syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ChavePixGrpc";

package com.zupacademy.henio.pix.grpc;

import "google/protobuf/timestamp.proto";


service KeymanagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}


service KeymanagerRemoveGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

message RemoveChavePixRequest {
  string clienteId         = 1;
  string pixId            = 2;
}

message RemoveChavePixResponse {
  string clienteId        = 1;
  string pixId            = 2;
}


service KeymanagerCarregaGrpcService {
  rpc carrega (CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

message CarregaChavePixRequest {
  message FiltroPorPixId {
    string clienteId   = 1;
    string pixId      = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave        = 2;
  }
}

message CarregaChavePixResponse {

  message ChavePix {

    message ContaInfo {
      TipoConta tipoConta = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipoChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp createdAt = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}


service KeymanagerListaGrpcService {
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

message ListaChavePixRequest {
  string clienteId = 1;
}

message ListaChavePixResponse {

  message ChavePix {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp createdAt = 5;
  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;
}




